# flamedeck

./: .gitignore  .pnp.cjs  .prettierignore  .prettierrc.cjs  .vercelignore  AGENT.md  CLAUDE.md  Dockerfile  README.md  eslint.config.js  fly.toml  index.html  nx.json  package-lock.json  package.json  project.json  tailwind.config.ts  trace.json  tsconfig.base.json  vercel.json  vite.config.ts
.cursor/rules/: coding-conventions.mdc  creating-settings-page.mdc  database-changes.mdc  edge-function-error-handling.mdc  edge-functions.mdc  flamedeck-subscription-model.mdc  project-context.mdc
.github/workflows/: performance-tests.yml  release-cli.yml  test-install-script.yml
apps/client/: CHAT_LIMIT_UI_CHANGES.md  README.md  index.html  package.json  playwright.config.ts  project.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vite.config.ts.timestamp-1745705189333-d9979a87cad84.mjs  vite.config.ts.timestamp-1745771258518-5ef2eacfd7af1.mjs
apps/docs/: .gitignore  README.md  api-keys.mdx  cli-upload.mdx  introduction.mdx  mcp-server.mdx  mint.json  npm-upload.mdx  package.json  project.json  react-native.mdx
apps/flamechart-server/: README.md  package.json  project.json  tsconfig.json
cli-rust/: Cargo.toml  README.md
cli-rust/src/: main.rs
docs/: chat-architecture.md  features.md  performance-regression-architecture.md  stripe-architecture.md  style-guidelines.md  trace-upload.md
docs-mintlify/: introduction.mdx  mcp-server.mdx  mintlify.json
scripts/: install.sh
src/: App.tsx  index.css  main.tsx
supabase/: README.md  config.toml  seed.sql
(+420 files in other folders)
